# recnode

./: .dockerignore  .gitignore  Cargo.toml  README.md  main.py  main_batch.py  main_server.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
.github/workflows/: main.yaml  only_chart.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: job.yaml
docker/: Dockerfile  Dockerfile-dev  docker-compose-batch.yml  docker-compose-dev.yml  docker-compose-gluetun.yml  docker-compose-proxy-prod.yml  docker-compose-proxy.yml  docker-compose-server-stage.yml  docker-compose-server-vpn-stage.yml  docker-compose-server-vpn.yml  docker-compose-server-vpn1.yml  docker-compose-server-vpn2.yml  docker-compose-server.yml  docker-compose-test-batch.yml  docker-compose-test-watcher.yml  docker-compose-watcher.yml  docker-compose.yml
kube/argo-events/: Chart.yaml  values.yaml
kube/argo-events-vpn/: Chart.yaml  values.yaml
kube/argocd/: application.yaml
kube/chart/: values.yaml
kube/expose/: Chart.yaml  values.yaml
kube/infra/: Chart.yaml  values.yaml
prometheus/: dashboard.json
recnode/: __main__.py
scripts/: .gitignore  Makefile  argo-run.bat  curl.js  curl.py  curl.sh  deploy-gluetun.sh  deploy-vpn.sh  deploy.sh  docker-build.bat  docker-compose-batch.bat  docker-compose-batch.sh  docker-compose-dev.bat  docker-compose-stage.bat  docker-compose-vpn-stage.bat  docker-compose-watcher.bat  docker-compose.bat  docker-push-prod.bat  docker-push-test.bat  docker-push.bat  ffmpeg-dl.sh  helm-install.bat  helm-proxy-proton.bat  helm-separate.bat  merge_ts.py  run.bat  run_batch.bat  run_proxy.bat  run_server.bat  run_watcher.bat  rust_build.bat  tag-delete-all.bat  tag-push.bat  tag_delete_all.py  venv_init.bat
src/: lib.rs
stdl/: StreamRecorder.py  __main__.py  env.py  logger.py  runner.py
(+416 files in other folders)
