[project]
name = "stdl"
version = "1.0.2"
description = "Distributed Live Stream Recording Cluster"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiobotocore==2.22.0",
    "aiofiles==24.1.0",
    "aiohttp==3.11.11",
    "aiohttp-socks==0.10.1",
    "fastapi==0.115.8",
    "maturin==1.10.2",
    "prometheus-client==0.21.1",
    "pydantic==2.10.6",
    "python-multipart==0.0.20",
    "pyutils",
    "pyyaml==6.0.2",
    "redis==5.2.1",
    "streamlink==7.1.3",
    "types-aiobotocore[s3]==2.22.0",
    "uvicorn==0.34.0",
]

[dependency-groups]
dev = [
    "black==25.1.0",
    "pyright==1.1.394",
    "pytest==8.2.2",
    "pytest-asyncio==0.25.2",
]

[tool.uv.sources]
pyutils = { git = "https://github.com/rwiv/pyutils.git", rev = "v0.3.3" }

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.black]
line-length = 125
